--- a/app-api/package.json
+++ b/app-api/package.json
@@ -13,7 +13,10 @@
     "morgan": "~1.7.0"
   },
   "devDependencies": {
+    "chai": "^3.5.0",
     "mocha": "^3.0.2",
+    "proxyquire": "^1.7.10",
+    "sinon": "^1.17.5",
     "standard": "^8.0.0",
     "supertest": "^2.0.0"
   }
