--- a/app-api/package.json
+++ b/app-api/package.json
@@ -10,7 +10,8 @@
     "body-parser": "~1.15.1",
     "debug": "~2.2.0",
     "express": "~4.13.4",
-    "morgan": "~1.7.0"
+    "morgan": "~1.7.0",
+    "mysql": "^2.11.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
